r349 (21. 10. 2025):
Added remaining Persistent state to buffs in perks with abilities
Added buff for "Tactical Reload" from Copycat perk
Bloodthirst Buff: Fixed visual 0x multiplier after spawn
Buffs: Fixed incorrect number of ability recharge timers
Buffs: Fixed missing options for Tag Team - Absorption
Buffs: Fixed Stoic's applied damage over-time not working (regression from r249)
Sicario's Smoke Bomb: Fixed waypoint to the cloud always have white color and not color of the thrower

r348 (10. 10. 2025):
Buffs: Fixed an issue where some Buffs do not update after drop in
Buffs: Removed "Bloodthirst Ration" and Bloodthirst Gauge will appear on the screen as long the skill is equipped
Player Ping Tracker: Fixed an empty space
The White House: Deployables left in the PEOC are ignored after leaving

r347 (03. 10. 2025):
Holdout: First World Bank: Fixed a load crash on client
Money Tracker: Fixed an issue where ransom payout is not counted in Holdout

r346 (29. 09. 2025):
Heat Street: Fixed a load crash with Restoration Mod installed

r345 (24. 09. 2025):
Buffs: Fixed a compatibility issue with WeaponLib causing Buff Reload and Interaction Reload to not work correctly

r344 (22. 09. 2025):
Added options for unlockable "Event Missions" in Side Jobs
Streamlined code for units that use MissionDoor class
Fixed an issue where sometimes -1 was returned when trying to determine a count of loot or snipers when playing on certain difficulties
Fixed an issue where after upgrading a drill/saw the timer in the tracker did not match in waypoint
Possible fix for 0s in Timer tracker and waypoint after upgrading a drill/saw
Golden Grin Casino: Fixed an issue where Colored Code tracker and waypoint does not hide after opening the vault
Player Ping Tracker: Increased tracker size a bit to improve readability
Player Ping Tracker: Fixed empty tracker when starting a heist alone in multiplayer
Player Ping Tracker: Fixed position sometimes not reflecting correctly